chore: dockerfile 수정